Screen look too wide in entire pages. In checkout page issue #399

--- a/Magento_Theme/web/css/source/_module.less
+++ b/Magento_Theme/web/css/source/_module.less
@@ -160,7 +160,7 @@ ul, ol {
 .nav-sections .navigation .level0 .submenu a{	
 	color:  @primary__color;	
 	display: inline-block;
-	width: 180px;
+	//width: 180px;
 	white-space: pre-wrap;	
 }
 .checkout-cart-index .actions-toolbar .charity {
@@ -1604,6 +1604,12 @@ div#testing{
 .nav-sections {
 	padding-top: 0;
 }
+
+body.checkout-index-index.page-layout-checkout #maincontent {
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
 .checkout-cart-index #block-charity .primary {
     width: 45%;
     margin-right: 10px;
@@ -2777,6 +2783,7 @@ box-shadow: none !important;
     .fotorama-item.fotorama.fotorama--fullscreen {
         z-index: 10000000 !important;
     }
+
     .page-wrapper.youTubeFullWidth .mainHeader, .page-wrapper.youTubeFullWidth #live-chat-widget{
         z-index: 0;
     }
